# rainbow-triangle-opengl-cpp

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shaders/: rainbow_triangle.frag  rainbow_triangle.vert
cmake/: dependencies.cmake  safeguards.cmake
include/: file_utils.hpp  shader.hpp
src/: file_utils.cpp  main.cpp  shader.cpp
